fixed alignment

--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -9,6 +9,7 @@
 
 .wrapper > .container {
 	justify-items: center;
+	align-items: start;
 }
 
 .wrapper__content {
